syntax = "proto3";

import "ibc/core/client/v1/client.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/gjermundgaraba/pessimistic-validation/attestationsidecar/types";

// TODO: FIGURE OUT HOW TO GET THESE IMPORTED INSTEAD, SOMETHING WEIRD ABOUT INCORRECT GO TYPE OR SOMETHING
message SignedPacketCommitmentsClaim {
  bytes attestator_id = 1;
  PacketCommitmentsClaim packet_commitments_claim = 2
  [ (gogoproto.nullable) = false ];
  bytes signature = 3;
}

message PacketCommitmentsClaim {
  ibc.core.client.v1.Height height = 1 [ (gogoproto.nullable) = false ];
  google.protobuf.Timestamp timestamp = 2
  [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  repeated bytes packet_commitments = 3;
}